--- a/src/styles/Pairs.scss
+++ b/src/styles/Pairs.scss
@@ -1,3 +1,4 @@
-.pairs h3 {
-  padding: 15px 15px 15px 0;
+.pairs h2 {
+  padding: 25px 15px 15px 0;
+  text-transform: none;
 }
