--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: clamp(10rem, 12vw, 16rem);
+  font-size: clamp(8rem, 12vw, 16rem);
   letter-spacing: calc(0px - max(12px, 1.5vw));
   text-transform: uppercase;
 }
